Restore transitions for components to fix modal & collapse.

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -2548,6 +2548,10 @@ table th[class*="span"],
 }
 .fade {
   opacity: 0;
+  -webkit-transition: opacity 0.15s linear;
+  -moz-transition: opacity 0.15s linear;
+  -o-transition: opacity 0.15s linear;
+  transition: opacity 0.15s linear;
 }
 .fade.in {
   opacity: 1;
@@ -2556,6 +2560,10 @@ table th[class*="span"],
   position: relative;
   height: 0;
   overflow: hidden;
+  -webkit-transition: height 0.35s ease;
+  -moz-transition: height 0.35s ease;
+  -o-transition: height 0.35s ease;
+  transition: height 0.35s ease;
 }
 .collapse.in {
   height: auto;
